--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,19 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="AppTheme"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.StockAnalyst"
+        android:theme="@style/AppTheme"
         tools:targetApi="31" >
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.StockAnalyst" >
+            android:label="AppTheme"
+            android:theme="@style/AppTheme"
+            >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
